setup github pages action for base url /v2

--- a/content/blog/second-blog.mdx
+++ b/content/blog/second-blog.mdx
@@ -1,8 +1,8 @@
 ---
 title: First Blog
-description: Blog Description
+description: Blog Description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit fugit at magni delectus, fuga exercitationem saepe dolor culpa accusantium ipsam itaque dolore hic. Dolores veritatis consectetur officiis, nam provident tempore.
 icon: simple-icons:github
-date: 2026-01-21
+date: 2025-01-21
 author: Anshul Raj Verma
 ---
 
