remove mkdocs specific markdown

--- a/content/journal/2024/01.md
+++ b/content/journal/2024/01.md
@@ -8,7 +8,7 @@ categories: [journal, january]
 
 ## Week 1: Dev Journal of January
 
-### Learnings
+### Learning
 
 1. **`ruff`**: An amazing python code linter and formatter with very high performance, written in Rust.
    - Ruff GitHub: <https://github.com/astral-sh/ruff>
@@ -34,7 +34,7 @@ categories: [journal, january]
 
 ## Week 2: Dev Journal of January
 
-### Learnings
+### Learning
 
 1. **VSCode UI Settings**: Explore settings in VS Code IDE which will modify its UI colour (mainly).
 2. **Discussed Cold Turkey Blocker issue on Windows**: Windows have the path related issue.
@@ -53,7 +53,7 @@ categories: [journal, january]
 
 ## Week 3: Dev Journal of January
 
-### Learnings
+### Learning
 
 1. **`mkdocs-material`**: I have this amazing documentation maker using `.md` files in 1 day (almost). You can see my
    personal website hosted with [GitHub Pages](https://arv-anshul.github.io).
@@ -76,7 +76,7 @@ categories: [journal, january]
 
 ## Week 4: Dev Journal of January
 
-### Learnings
+### Learning
 
 1. [**`yt-watch-history`**](https://github.com/arv-anshul/yt-watch-history): This week I spend all the time on
    refactoring and understanding my project. It feels very difficult to work on but I made my mind and say that here **I
@@ -96,12 +96,12 @@ categories: [journal, january]
 
 ## Week 5: Dev Journal of January
 
-### Learnings
+### Learning
 
 1. **[`learnwith.campusx.in`](https://learnwith.campusx.in)**: I have written a script which goes through the html of
    the website and using the `cookies` it fetches the resources which were provided in the videos' description.
 2. **Learning ML Concepts**: I have learned how **Gini Impurity/Index** works by practicing it on paper with my hand and
-   pencil. ^^This helps me a lot and I (sort of) figured out, how should I learn things in ML.^^
+   pencil. **This helps me a lot and I (sort of) figured out, how should I learn things in ML.**
 3. **Blog on Decision Tree**: I published a blog on decision tree on my
    [website](https://arv-anshul.github.io/blog/category/ml/).
 
