--- a/content/journal/2024/02.md
+++ b/content/journal/2024/02.md
@@ -8,7 +8,7 @@ categories: [journal, february]
 
 ## Week 5 Journal
 
-### Learnings
+### Learning
 
 1. **`yt-watch-history`**: After 3 iterations I have understand how to deal with ML models.
 2. **`yt-watch-history`**: New PR for `channel_reco` in `frontend`. This PR just take subscription data and shows the
@@ -24,7 +24,7 @@ categories: [journal, february]
 
 ## Week 6 Journal
 
-### Learnings
+### Learning
 
 1. [**`campusx`**](https://github.com/arv-anshul/campusx): I have built new project where you can get all the notes and
    links provided in the description of sessions of DSMP course.
@@ -37,8 +37,8 @@ categories: [journal, february]
 
 ### Thoughts
 
-1. **Conventional Commits**: For a long time I have been thinking about to follow a pre-defined convention for **GIT
-   commits** but where-ever I check I don't understand then I came across
+1. **Conventional Commits**: For a long time I have been thinking about to follow a convention for **GIT commits** but
+   where-ever I check I don't understand then I came across
    [`vivaxy.vscode-conventional-commits`](https://marketplace.visualstudio.com/items?itemName=vivaxy.vscode-conventional-commits)
    a VSCode extension and now I know how to write better commits. 😉
 2. **Mkdocs**: `mkdocs-material` is a very powerful tool to create static web pages using **markdowns**.
@@ -48,7 +48,7 @@ categories: [journal, february]
 
 ## Week 7 Journal
 
-### Learnings
+### Learning
 
 1. [**`rye`**][rye]: My new way to manage projects like pro. I have used it and this is very convenient to use and
    manage.
@@ -80,7 +80,7 @@ categories: [journal, february]
 
 ## Week 8 Journal
 
-### Learnings
+### Learning
 
 1. [**`Starship`**][starship]: Now I have learned `starship` in a way that I can customize my prompt easily however I
    want to be. I written [a blog](https://arv-anshul.github.io/blog/2024/02/21/starship-prompt/) a on it to. You can
@@ -96,7 +96,7 @@ categories: [journal, february]
    mentioned my project [**`yt-watch-history`**][yt-watch-history] because he thinks that the project good fit their
    program _(and I am doing this project to learn MLOps concepts like Docker, MLFlow)_.
 
-![18-02-2024](../assets/joey-mail-backdropbuild.png "Joey's mail to join the program."){ .base-border-radius }
+![18-02-2024](../assets/joey-mail-backdropbuild.png "Joey's mail to join the program.")
 
 > [!NOTE]
 >
@@ -111,7 +111,7 @@ categories: [journal, february]
 
 ## Week 9 Journal
 
-### Learnings
+### Learning
 
 1. **😞 Not Much!**
 2. But I have watched some sessions of the **DSMP 2.0**.
@@ -123,7 +123,7 @@ categories: [journal, february]
 
 ## Week 10 Journal
 
-### Learnings
+### Learning
 
 1. [**`rye`**][rye] transferred to [`astral-sh`](https://astral.sh/) Github Organization.
 2. **`ruff`** released it `v0.3.0` with new formatting rules `2024-02`.
