--- a/content/journal/2024/03.md
+++ b/content/journal/2024/03.md
@@ -12,7 +12,7 @@ categories: [journal, march]
 
 ## Week 11 Journal
 
-### Learnings
+### Learning
 
 1. [Zed]: Tried Zed code editor and I feel promising to adapt.
 2. [arv-anshul/dotfiles]: Updated `dotfiles`, inspired by [corey/dotfiles].
@@ -53,7 +53,7 @@ categories: [journal, march]
 
 ## Week 12 Journal
 
-### Learnings
+### Learning
 
 1. [arv-anshul.github.io]
    - Update some componet's layouts of website i.e. Grid Cards, Code Blocks, Buttons.
@@ -62,8 +62,8 @@ categories: [journal, march]
    - Migrate `diary` notes as blog on website.
    - Trying to drop [**Obsidian**](https://obsidian.md) for my diary entry and want to use `mkdocs` (with basic
      functionalities) for dairy entry.
-   - :material-check-all:{ .success } Successfully migrated [arv-anshul/diary] from Obsidian to `mkdocs`. Compare
-     releases [`v1.0.0...v1.1.0`](https://github.com/arv-anshul/diary/compare/v1.0.0...v1.1.0).
+   - Successfully migrated [arv-anshul/diary] from Obsidian to `mkdocs`. Compare releases
+     [`v1.0.0...v1.1.0`](https://github.com/arv-anshul/diary/compare/v1.0.0...v1.1.0).
    - Wrote custom snippets for Dev Journal(s) and Thoughts entries in VSCode.
 3. [arv-anshul/campusx]
    - Modified scripts to infer filename from response's headers. Filename is available in `"content-disposition"`
@@ -83,7 +83,7 @@ categories: [journal, march]
 2. [Setting up tags - Material for MkDocs](https://squidfunk.github.io/mkdocs-material/setup/setting-up-tags/)
    - Learn how to setup tags (as pro).
    - Also, figure out how does `squidfunk` render those "versions", "default values", "sponsors only" cool badges.
-   - Also see this [webpage](https://mkdocs-material.github.io/examples/tags/) :material-new-box:
+   - Also see this [web page](https://mkdocs-material.github.io/examples/tags/)
      - There is an example for `tags` plugin.
      - Learn how did this works?
 3. [raycast]
@@ -108,7 +108,7 @@ categories: [journal, march]
 
 ## Week 13 Journal
 
-### Learnings
+### Learning
 
 1. [pw-api](https://github.com/arv-anshul/pw-api)
    - The project doesn't works now due to some major changes in [pwskills.com](https://pwskills.com) website's APIs.
