--- a/content/journal/2024/04.md
+++ b/content/journal/2024/04.md
@@ -8,7 +8,7 @@ categories: [journal, april]
 
 ## Week 14 Journal
 
-### Learnings
+### Learning
 
 1. [Rust]
    - Learning Rust from YouTube and Rust Books.
@@ -30,7 +30,7 @@ categories: [journal, april]
 
 ## Week 15 Journal
 
-### Learnings
+### Learning
 
 1. [mkdocs - `nav`](https://www.mkdocs.org/user-guide/configuration/#nav)
    - Create multiple references of same notes in `mkdocs.yaml`'s `nav` field and then it gets render as it is written.
@@ -68,22 +68,21 @@ categories: [journal, april]
 
    <figure markdown>
 
-   |                 :simple-simpleicons:                 |     ID     |
-   | :--------------------------------------------------: | :--------: |
-   |                   :simple-discord:                   | `batookm`  |
-   |      [:simple-telegram:](https://t.me/batookm)       | `batookm`  |
-   | [:simple-instagram:](https://instagram.com/_batookm) | `_batookm` |
+   |                  Platform                   |     ID     |
+   | :-----------------------------------------: | :--------: |
+   |                   Discord                   | `batookm`  |
+   |      [Telegram](https://t.me/batookm)       | `batookm`  |
+   | [Instagram](https://instagram.com/_batookm) | `_batookm` |
 
    </figure>
 
-   - ~~:thinking: Thinking to change :simple-github:{ .middle } GitHub username too but that is too overwhelming.~~
+   - ~~:thinking: Thinking to change GitHub username too but that is too overwhelming.~~
    - I am not going to change GitHub and LinkedIn username because `arv-anshul` is my professional username and `batook`
-     is my nick-username. If I made my :simple-x:{ title="formally Twitter" } then I'll keep my username as
-     ^^`batook`^^{ title="similar to this" } :sunglasses:.
+     is my nick-username. If I made my X _(formally Twitter)_ then I'll keep my username as **`batook`** :sunglasses:.
 
 4. [freeapi.app] - By Hitesh Choudhary :sunglasses:
 
-   - I am thinking to recreate this in Python using :simple-fastapi: **FastAPI** as `freeapi-py`.
+   - I am thinking to recreate this in Python using **FastAPI** as `freeapi-py`.
    - I first need to tackle:
      - How to handle `limit` query?
      - How to use MongoDB from localhost and Docker?
