--- a/content/journal/2024/05.md
+++ b/content/journal/2024/05.md
@@ -40,7 +40,7 @@ categories: [journal, may]
 
 1. Restart the [yt-watch-history] project as [yt-watch-history-v2].
 
-   - Thinking the whole process from scratch, draw some digrams on ^^app.eraser.io^^.
+   - Thinking the whole process from scratch, draw some digrams on **app.eraser.io**.
    - Copied the code of `api/` and `ml/` but writing the code for **frontend** from scratch.
 
 2. Creating a website for [Rahul] using [mkdocs-material]. [Check it out here](https://rahulkr30.github.io).
@@ -52,11 +52,11 @@ categories: [journal, may]
 
    <figure markdown>
 
-   | Page                                     | URL                                                                  |
-   | ---------------------------------------- | -------------------------------------------------------------------- |
-   | :material-music-note: **Music**          | [`/music`](https://arv-anshul.github.io/music)                       |
-   | :material-movie-open: **Movies & Shows** | [`/movies-and-shows`](https://arv-anshul.github.io/movies-and-shows) |
-   | :simple-funimation: **Anime**            | [`/anime`](https://arv-anshul.github.io/anime)                       |
+   | Page               | URL                                                                  |
+   | ------------------ | -------------------------------------------------------------------- |
+   | **Music**          | [`/music`](https://arv-anshul.github.io/music)                       |
+   | **Movies & Shows** | [`/movies-and-shows`](https://arv-anshul.github.io/movies-and-shows) |
+   | **Anime**          | [`/anime`](https://arv-anshul.github.io/anime)                       |
 
    </figure>
 
@@ -128,19 +128,18 @@ python -c "from datetime import date; print(f'Current week number is {date.today
 
    - See the release note for [`v0.11.0`](https://github.com/arv-anshul/campusx/releases/v0.11.0)
 
-2. Learned :simple-task: [Taskfile] (alternative to Makefile). Taskfile is better, easy, intuitive to use than Makefile.
+2. Learned [Taskfile] (alternative to Makefile). Taskfile is better, easy, intuitive to use than Makefile.
 
    - Pushed global `Taskfile.yaml` into [dotfiles] repository.
 
 3. [Marimo] is a alternative to Jupyter Notebooks.
 
-   - I came to about it while juggling between :simple-zedindustries: Zed isuess.
+   - I came to about it while juggling between Zed isuess.
    - Also, [Marimo has a blog] where they discussed that how Marimo has overhead on Jupyter Notebooks.
 
 4. After using [Marimo]:
 
-   - It has very functioning than :simple-jupyter: Jupyter Notebooks because Marimo works on `.py` files instead of
-     `.ipynb` files.
+   - It has very functioning than Jupyter Notebooks because Marimo works on `.py` files instead of `.ipynb` files.
    - It has better markdown support. You can natively pin the python vars in MDs.
    - It has builtin support to convert a Jupyter notebook or Markdown file to a marimo script.
    - You can use marimo but it has long learning curve.
@@ -148,7 +147,7 @@ python -c "from datetime import date; print(f'Current week number is {date.today
      it).
    - Currently, I have no plans to switch to [Marimo].
 
-5. There is a big problem, I am facing with :simple-task: [Taskfile].
+5. There is a big problem, I am facing with [Taskfile].
 
    Here, when you run Taskfile from different dir while referring to another Taskfile (present in different dir) with
    `-t` or `-d` flag, it will not take reference of `pwd` instead take reference of dir where the Taskfile present.
