--- a/content/journal/2024/07.md
+++ b/content/journal/2024/07.md
@@ -48,14 +48,14 @@ categories: [journal, july]
 
 **2024-07-11**
 
-- Created :simple-huggingface: HuggingFace account with `arv@leapx.ai` ID.
-- Learned how to use :simple-huggingface: Spaces and created a GH Action in `campaign-dashboard` repo to push code from
-  GH to LeapX's HF Space where the streamlit app gets deployed. (done whole thing in 1 Hour :scream:)
+- Created HuggingFace account with `arv@leapx.ai` ID.
+- Learned how to use HF Spaces and created a GH Action in `campaign-dashboard` repo to push code from GH to LeapX's HF
+  Space where the Streamlit app gets deployed. (done whole thing in 1 Hour :scream:)
 
 **2024-07-12**
 
 - Learned and added Scrapy Pipeline to move scraped data into MongoDB cluster; also added Data Transformation (using
-  :simple-polars:) code for scraped data.
+  Polars) code for scraped data.
 
 ## Week 29 Journal
 
@@ -68,7 +68,7 @@ categories: [journal, july]
 
 - Modified `housing-dashboard` so that it can ingest data from MongoDB.
 - Scraped 10k+ data of **Delhi** and **Gurgaon** city using `properties-scraper`.
-- `housing-dashboard` is running on :simple-huggingface: HuggingFace Spaces.
+- `housing-dashboard` is running on HuggingFace Spaces.
 
 **2024-07-16**
 
@@ -118,14 +118,13 @@ Best Regards, Anshul Raj Verma Data Science Intern
 
 **2024-07-21**
 
-:star: Building `campaign-bot-api` with @Aditya and @Pratham and almost completed it. Made with :simple-fastapi: FastAPI
-with JWT auth (learned on-the-go).
+Building `campaign-bot-api` with @Aditya and @Pratham and almost completed it. Made with FastAPI with JWT auth (learned
+on-the-go).
 
 ## Week 30 Journal
 
 1. Droping the idea of journaling of LeapX.ai work.
-2. Learning :simple-langchain: LangChain and [RAG](https://python.langchain.com/v0.2/docs/tutorials/rag) for internship
-   projects.
+2. Learning LangChain and [RAG](https://python.langchain.com/v0.2/docs/tutorials/rag) for internship projects.
 3. Discussed about **User's Search Intent** classification with @Gagandeep & @Vishal.
    - [What is meant by search intent?](https://www.algolia.com/blog/ux/what-is-meant-by-search-intent-and-what-are-the-different-types/)
    - [Identify user search intent with machine learning.](https://www.algolia.com/blog/ai/how-to-identify-user-search-intent-using-ai-and-machine-learning/)
