--- a/content/journal/2024/09.md
+++ b/content/journal/2024/09.md
@@ -8,15 +8,15 @@ categories: [journal, september]
 
 ## Week 36 Journal
 
-1. Now, :simple-polars: Polars supports `altair` charts with `.plot` accessor.
+1. Now, Polars supports `altair` charts with `.plot` accessor.
 2. Heavy refactoring in `google-ads-api` project.
-3. Finally, migrated `housing-dashboard` project to :simple-taipy: Taipy from :simple-streamlit: Streamlit.
+3. Finally, migrated `housing-dashboard` project to Taipy from Streamlit.
 4. Helped @Sambhav with his Job Assignment related to simple RAG project.
-5. Learned how to use :simple-fdroid: F-Droid and also installed some utility apps.
+5. Learned how to use F-Droid and also installed some utility apps.
 
 ## Week 37 Journal
 
-1. Getting some issue with :simple-dell: DELL keyboard but now it is fixed.
+1. Getting some issue with DELL keyboard but now it is fixed.
 2. :technologist: Will not continue the internship after 3 months instead work on a big project to incorporate all my
    learning there and make it a standout project.
    - Read [**"After LeapX"** thoughts](/blog/internship-leapx#after-leapx).
@@ -50,9 +50,9 @@ categories: [journal, september]
 ## Week 39 Journal
 
 1. Replace `Pylance` with `basedpyright` in VSCode.
-2. Successfully configures :simple-zedindustries: Zed IDE with `basedpyright` and `ruff` extensions.
+2. Successfully configures Zed IDE with `basedpyright` and `ruff` extensions.
    > **I think now I can try to ditch VSCode editor.**
-3. Enabled :simple-codeium: Codeium AI completion in VSCode.
+3. Enabled Codeium AI completion in VSCode.
 4. Trying Zed and Marimo inplace of classic apps.
 5. :star: New project started in DSMP 2.0. It is a Chrome Extension for YouTube to perform sentiment analysis on video's
    comments.
