--- a/content/journal/2024/11.md
+++ b/content/journal/2024/11.md
@@ -31,6 +31,6 @@ categories: [journal, november]
 2. Started learning and practincing Deep Learning.
    - Learning from CampusX and Alexander Amini ([introtodeeplearning.com](https://introtodeeplearning.com)).
    - CampusX has started [new playlist](https://www.youtube.com/playlist?list=PLKnIA16_Rmvboy8bmDCjwNHgTaYH2puK7) around
-     :simple-pytorch: PyTorch.
-   - Also, noticed :simple-keras: [Keras 3.0](https://keras.io/keras_3) for its backend compatiblity.
+     PyTorch.
+   - Also, noticed [Keras 3.0](https://keras.io/keras_3) for its backend compatiblity.
 3. Understanding RNN and trying to implement it from scratch with `youtube-comment-sentiment` project's dataset.
