--- a/content/journal/2024/12.md
+++ b/content/journal/2024/12.md
@@ -17,11 +17,10 @@ categories: [journal, december]
 4. Created a Jupyter Notebook around **Search Keyword Classification** which I had work on while in internship.
    - Tackle all the problems like **Category Classification, Intent Classification, Score Assigning and Similar Keywords
      Grouping**.
-5. :cat: Discovered this [interesting project](https://github.com/catppuccin/userstyles) on top of :simple-stylus:
-   **Stylus** browser extension which apply **Catppuccin Theme** on various popular websites such as :simple-youtube:
-   :simple-github: :simple-openai: :simple-perplexity: :simple-spotify: and
-   [many more](https://github.com/catppuccin/userstyles#-userstyles). Isn't this intersting to transform all the website
-   theme in one color palette.
+5. :cat: Discovered this [interesting project](https://github.com/catppuccin/userstyles) on top of **Stylus** browser
+   extension which apply **Catppuccin Theme** on various popular websites such as GitHub, OpenAI, Perplexity, Spotify,
+   and [many more](https://github.com/catppuccin/userstyles#-userstyles). Isn't this interesting to transform all the
+   website theme in one color palette.
    - After this I am considring to try this **Catppuccin Theme** but I am afraid that I would like it because I don't
      really like it's color pallete.
 
@@ -59,14 +58,14 @@ categories: [journal, december]
 
 1. :star_struck: Building frontend side of [`yt-comment-sentiment`][yt-comment-sentiment] project using
    [VueJs](https://vuejs.org).
-2. :simple-vuedotjs: Learning **VueJs** for frontend, _as I don't know TypeScript using only Javascript_.
+2. Learning **VueJs** for frontend, _as I don't know TypeScript using only Javascript_.
 3. Deployed both Backend on Render.com and Frontend on GitHub Pages.
 4. Also wrote about [`yt-comment-sentiment` project](https://arv-anshul.github.io/project/yt-comment-sentiment).
 5. I have decided to make this project big enough to be called as a product in itself. (दृढनिश्चय)
 6. I also think to write a marimo notebook which summarize my development/learning/inconsistency using LLMs. As I want
    to summarize my whole year diary/journal with this idea.
-7. Wrote a blog on how to dockerize a FastAPI app which is managed by :simple-uv: `uv`, took reference of
-   `yt-comment-sentiment` project.
+7. Wrote a blog on how to dockerize a FastAPI app which is managed by `uv`, took reference of `yt-comment-sentiment`
+   project.
 8. I have also learned many things around `pre-commit` and `pytest` which I have used in project recently.
 9. Installed `ghostty` terminal emulator and it is great, looking forward to stick with it.
 
