--- a/content/journal/2025/01.md
+++ b/content/journal/2025/01.md
@@ -19,7 +19,7 @@ categories: [journal, january]
 3. **Will explore more in next week**:
    - [x] How to fine-tune BERT using PyTorch + HF Transformers?
    - [ ] How to fine-tune BERT using Tensorflow + HF Transformers?
-   - [x] ~~How to fine-tune BERT using Keras3 + PyTorch + HF Transformers only?~~{: .secondary } _(NOT POSSIBLE)_
+   - [x] ~~How to fine-tune BERT using Keras3 + PyTorch + HF Transformers only?~~ _(NOT POSSIBLE)_
    - [x] What are these terms like SPDA, PEFT, LORA and more for fine-tuning purpose.
 
 ## Week 02 Journal
@@ -35,7 +35,7 @@ categories: [journal, january]
    - [`.markdownlint.yaml`](https://github.com/astral-sh/ruff/blob/main/.markdownlint.yaml)
 6. Planning to migrate all `/ref` pages to `/blog` because these aren't any different from them. Also, I don't write
    blogs because I feel the articles are better fit for `/ref` pages which reduced the usages of `/blog` pages.
-   - :material-link-off: Migration may broke some links that I will fix later.
+   - Migration maybe broke some links that I will fix later.
 
 ## Week 03 Journal
 
