--- a/content/journal/2024/06.md
+++ b/content/journal/2024/06.md
@@ -8,7 +8,7 @@ categories: [journal, june]
 
 ## Week 23 Journal
 
-1. :partying_face: Found the solution of last point in [Week 22] which occurs with global :simple-task: Taskfile.
+1. :partying_face: Found the solution of last point in [Week 22] which occurs with global Taskfile.
 
    - Just use **`USER_WORKING_DIR`** special variable of Taskfiles.
 
@@ -19,13 +19,13 @@ categories: [journal, june]
        cmd: pre-commit run --all-files
      ```
 
-   - :material-file-document: Related Docs:
-     - [:simple-task: Running A Taskfile From A Subdirectory](https://taskfile.dev/usage/#running-a-taskfile-from-a-subdirectory)
-     - [:simple-task: Running A Global Taskfile](https://taskfile.dev/usage/#running-a-global-taskfile)
-     - [:simple-task: Special Variables](https://taskfile.dev/api/#special-variables)
+   - Related Docs:
+     - [Running A Taskfile From A Subdirectory](https://taskfile.dev/usage/#running-a-taskfile-from-a-subdirectory)
+     - [Running A Global Taskfile](https://taskfile.dev/usage/#running-a-global-taskfile)
+     - [Special Variables](https://taskfile.dev/api/#special-variables)
 
-2. Created :simple-huggingface: [HuggingFace] account because now I want to dive into LLMs and want to create some basic
-   application using them and in the flow of creating something I can learn DL and LLM concpets too.
+2. Created [HuggingFace] account because now I want to dive into LLMs and want to create some basic application using
+   them and in the flow of creating something I can learn DL and LLM concpets too.
 
 3. :ballot_box: Created [India Election 2024] dashboard using Streamlit. Used `httpx.AyncClient`, `polars.LazyFrame` and
    only `async` functions.
@@ -51,24 +51,24 @@ categories: [journal, june]
 
 ## Week 24 Journal
 
-1. I saw a guy in :simple-discord: "We write code" Server by Hitesh Chaudhary who has amazing portfolio and he had done
-   amazing work around Full Stack Development and he also contributed in multiple Open Source repos (big repos)
-   :AMAZING:. He made a full-pledged WORKING clown of PW website and also made a desktop app of PW using Tauri (Rust).
-   He has amazing portfolio website. There is so much things I can learn form him. **[@arnvgh]**
+1. I saw a guy in "We write code" Server by Hitesh Chaudhary who has amazing portfolio and he had done amazing work
+   around Full Stack Development and he also contributed in multiple Open Source repos (big repos) :AMAZING:. He made a
+   full-pledged WORKING clown of PW website and also made a desktop app of PW using Tauri (Rust). He has amazing
+   portfolio website. There is so much things I can learn form him. **[@arnvgh]**
 2. Completed the refactoring of CTT Model in [@arv-anshul/yt-watch-history-v2] project. See release [v0.3.0].
-3. ~~Created a community server on :simple-discord: Discord and added many interactive features which helps others to
-   connect and learn together as community.~~
+3. ~~Created a community server on Discord and added many interactive features which helps others to connect and learn
+   together as community.~~
    - After creating the discord server, I've deleted it because I don't think that this is for me.
 4. Wrote a clear project explanation paragraph of [@arv-anshul/yt-watch-history-v2] project. See on
    [website](https://arv-anshul.github.io/project/yt-watch-history).
-5. :star:{: .bounce } A employee from [AABEE](http://aabee.co.in) (a real state startup) reached me through **reached me
-   through my OG [99acres-scrape] project**. He conducted a meeting on G-Meet and given a task to scrape the older
-   prices of properties to tackle the property's price trend but the data is not there on the website. That's why he
-   said "we'll reach you later for any other work" :disappointed:.
-6. :star:{: .bounce } The 3 co-founders of [LeapX.ai] startup **reached me through my OG [99acres-scrape] project**.
-   They conducted a meeting on MS Teams and the **meeting goes for 48 Minutes**{ title="🤯" } while meeting they ask for
-   my education, data science knowledge. In the end, they asked me a problem to explain (not solve; just explain) on the
-   basis of explain they offer me a internship :star_struck:.
+5. A employee from [AABEE](http://aabee.co.in) (a real state startup) reached me through **reached me through my OG
+   [99acres-scrape] project**. He conducted a meeting on G-Meet and given a task to scrape the older prices of
+   properties to tackle the property's price trend but the data is not there on the website. That's why he said "we'll
+   reach you later for any other work" :disappointed:.
+6. The 3 co-founders of [LeapX.ai] startup **reached me through my OG [99acres-scrape] project**. They conducted a
+   meeting on MS Teams and the **meeting goes for 48 Minutes** while meeting they ask for my education, data science
+   knowledge. In the end, they asked me a problem to explain (not solve; just explain) on the basis of explain they
+   offer me a internship :star_struck:.
    - I first interacted with Aditya, when he cam to know that I am in class 12th then started asking me about my Father
      and his profession and my place, how I study there, which school.
    - One of them is from **Makhdumpur** :star_struck:.
@@ -83,34 +83,33 @@ categories: [journal, june]
 
 ## Week 25 Journal
 
-1. :simple-vercel: Project [og-py] to create custom GitHub repo social preview image using
-   `https://og-playground.vercel.app/` playground.
+1. Project [og-py] to create custom GitHub repo social preview image using `https://og-playground.vercel.app/`
+   playground.
 2. :star: Working at LeapX.ai as Intern.
-3. :llama: Try using `ollama` in :simple-zedindustries: Zed editor. It is great but the response time very bad but I'll
-   use it.
-4. :simple-playwright: Read/Watch something about Playwright (better alternative of Selenium).
+3. :llama: Try using `ollama` in Zed editor. It is great but the response time very bad but I'll use it.
+4. Read/Watch something about Playwright (better alternative of Selenium).
 5. :handshake: Connected with [@ujjwal-basnet] and [@iamrajharshit] from Discord.
 
 ### Internship at **LeapX.ai**
 
 **2024-06-19**
 
-: After a one day off, We (Me and Aditya) connect on :material-microsoft-teams: and discuss the affluent properties
-clustering problem. I have created some dashboard around it but after the meeting the conclusion is that data is not
-good because many properties were removed from 99acres's website. So we decided to scrape new data from the website. So
-I have to write code for that.
+After a one day off, We (Me and Aditya) connect on and discuss the affluent properties clustering problem. I have
+created some dashboard around it but after the meeting the conclusion is that data is not good because many properties
+were removed from 99acres's website. So we decided to scrape new data from the website. So I have to write code for
+that.
 
 **2024-06-20**
 
-: While scraping data from 99acres with selenium I got many errors then I decided to scrape data from other website like
+While scraping data from 99acres with selenium I got many errors then I decided to scrape data from other website like
 Housing.com or MagicBricks.com.
 
-: I am planning to use [`selenium-wire`](https://pypi.org/p/selenium-wire). And, want to scrape more than one website
-and create a pipeline through which different websites' data combines together and forms a wholesome dataset to work on.
+I am planning to use [`selenium-wire`](https://pypi.org/p/selenium-wire). And, want to scrape more than one website and
+create a pipeline through which different websites' data combines together and forms a wholesome dataset to work on.
 
 **2024-06-21**
 
-: Getting errors while using `selenium-wire` package, so I try to learn and use `playwright`. Again try to scrape using
+Getting errors while using `selenium-wire` package, so I try to learn and use `playwright`. Again try to scrape using
 `httpx` with headers and cookies and I got success so I scrape almost 3K data using this. For now I'm sticking with this
 method.
 
@@ -119,7 +118,7 @@ method.
 1. Thinking to create a GitHub Repo where all the scraping code for different websites are present. Also, repo maintains
    a `README.md` file for different scraping project, tools and resources.
 
-2. Used `st.Page` (new multipage UI update from :simple-streamlit:) while building dashboards for LeapX.
+2. Used `st.Page` (new multipage UI update from Streamlit) while building dashboards for LeapX.
 
 3. :star: Got **Offer from LeapX.ai** for 3 month intership.
 
@@ -139,31 +138,29 @@ method.
 
 **2024-06-25**
 
-: Meeting started after :clock8: **20:00** and end at :clock1030: **22:30**. We worked on dataset scraped from
-Housing.com contains ~12K rows.
+Meeting started after :clock8: **20:00** and end at :clock1030: **22:30**. We worked on dataset scraped from Housing.com
+contains ~12K rows.
 
-: We took a different approach to cluster properties, used [polars.Expr.qcut] function to categories properties on the
-basis of `"PRICE_PER_UNIT_AREA"`. After this created a dashboard around this (with :simple-streamlit:).
+We took a different approach to cluster properties, used [polars.Expr.qcut] function to categories properties on the
+basis of `"PRICE_PER_UNIT_AREA"`. After this created a dashboard around this (with Streamlit).
 
-: Now the main problem is to find a dense region and create a circle around it to mark that region with a label _eg.
-Luxury, Value, Affordable, etc._{ .secondary } And for this I have to write a function which do these findings and
-creating regions.
+Now the main problem is to find a dense region and create a circle around it to mark that region with a label _eg.
+Luxury, Value, Affordable, etc._ And for this I have to write a function which do these findings and creating regions.
 
 **2024-06-26**
 
-: No meeting conducted.
+No meeting conducted.
 
-: :butterfly:{ title="Using httpx library" } Scraped all 21K properties from Housing.com website of Gurgaon, faced many
-website downtime but eventually got things work.
+Using httpx library to scrape all 21K properties from Housing.com website of Gurgaon, faced many website downtime but
+eventually got things work.
 
-: :star: Received offer leeter from LeapX.
+Received offer leeter from LeapX.
 
 **2024-06-29**
 
-: :star: Completed the two page streamlit dashboard.
+Completed the two page streamlit dashboard.
 
-: Told me to learn about AI stuffs like :simple-langchain: Langchain and Llama Index. Already found an awesome video on
-:simple-langchain:.
+Told me to learn about AI stuffs like Langchain and Llama Index. Already found an awesome video on it.
 
 [99acres-scrape]: https://github.com/arv-anshul/99acres-scrape
 [@arnvgh]: https://github.com/arnvgh
