--- a/content/journal/2024/08.md
+++ b/content/journal/2024/08.md
@@ -8,25 +8,25 @@ categories: [journal, august]
 
 ## Week 32 Journal
 
-1. Finetune the **DistilBert Model** from :simple-huggingface: HuggingFace for `search-keywords` classification.
+1. Finetune the **DistilBert Model** from HuggingFace for `search-keywords` classification.
 2. :handshake: Me and @Pushpam met with @Vishal (LeapX) and had an amazing talk at lunch.
 3. Created a collab notebook which further finetune pre-trained LeapX's Keywords Classifier Model with more data and
-   automatically pushes it in :simple-huggingface: HuggingFace models repository.
-4. Learned more about :simple-langchain: LangChain's LCEL and re-built the `campaign-bot` from scratch using it.
+   automatically pushes it in HuggingFace models repository.
+4. Learned more about LangChain's LCEL and re-built the `campaign-bot` from scratch using it.
 
 ## Week 33 Journal
 
-1. Scheduled a cron for `properties-scraper` project on :simple-githubactions: GitHub Actions.
-2. Made changes in `campaign-bot` streamlit app and also deployed it on :simple-huggingface: HF Spaces.
+1. Scheduled a cron for `properties-scraper` project on GitHub Actions.
+2. Made changes in `campaign-bot` streamlit app and also deployed it on HF Spaces.
 3. Switched from bash script to python script to run the `properties-scraper`.
-4. :simple-rust: Created [`md_badges`](https://github.com/arv-anshul/thrust/tree/main/md_badges) project in Rust.
-5. Update :simple-materialformkdocs: `mkdocs-material` for website but this introduces some minor bugs _due to removal
-   of Microsoft icons from :simple-simpleicons: SimpleIcons repository_.
+4. Created [`md_badges`](https://github.com/arv-anshul/thrust/tree/main/md_badges) project in Rust.
+5. Update `mkdocs-material` for website but this introduces some minor bugs _due to removal of Microsoft icons from
+   SimpleIcons repository_.
 
 ## Week 34 Journal
 
 1. PiyushGarg started new playlist around **The Rust Book** (online version).
-2. :simple-astral: **`uv` v0.3.0** allow support for `uv init`, `uv add`, `uv remove`, `uv run` and many more. Read the
+2. **`uv` v0.3.0** allow support for `uv init`, `uv add`, `uv remove`, `uv run` and many more. Read the
    [release blog](https://astral.sh/blog/uv-unified-python-packaging).
 3. Aditya sir posted on `housing-dashboard` project
    [on LinkedIn](https://www.linkedin.com/posts/adityaojas_datascience-locationintelligence-leapx-activity-7231631853575663618-yp4-),
@@ -40,7 +40,7 @@ categories: [journal, august]
 2. Completed 2 Months at LeapX.ai.
 3. Bought new smartphone "Nothing Phone 2a".
 4. Writing my journal in draft form in Google Notes.
-5. Deployed `google-ads-api` project at :simple-render: Render.com, after a long & hectic bugging session with @Pratham.
+5. Deployed `google-ads-api` project at Render.com, after a long & hectic bugging session with @Pratham.
 6. :package: `uv` new release `0.5.0` brings support for build-less packages. So now I can completely ditch `rye`.
 7. Migrated to `uv` in `diary` and `arv-anshul.github.io` repos from `rye`.
 8. Talk with @TanuKumari regarding college and SIH project.
